[package]
name = "solana-guard-escrow"
version = "0.1.0"
description = "Trustless escrow protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_guard_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"

[dev-dependencies]
anchor-spl = "0.30.1"
